--- a/pom.xml
+++ b/pom.xml
@@ -9,30 +9,32 @@
     <url>http://maven.apache.org</url>
   
     <properties>
-        <org.springframework.version>4.3.2.RELEASE</org.springframework.version>
-        <org.spring.security.version>4.2.8.RELEASE</org.spring.security.version>
+        <org.springframework.version>5.3.30</org.springframework.version>
+        <org.spring.security.version>5.8.7</org.spring.security.version>
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
         <jsp-api.version>2.2</jsp-api.version>
         <org.slf4j.version>1.6.1</org.slf4j.version>
-        <org.apache.tiles.version>2.2.2</org.apache.tiles.version>
+        <org.apache.tiles.version>3.0.8</org.apache.tiles.version>
         <javax.validation.version>1.1.0.Final</javax.validation.version>
         <javax.mail.version>1.4.7</javax.mail.version>
         <junit.version>4.11</junit.version>
         <jstl.version>1.2</jstl.version>
-        <commons-fileupload.version>1.3.1</commons-fileupload.version>
+        <commons-fileupload.version>1.3.3</commons-fileupload.version>
         <commons-io.version>1.3.2</commons-io.version>
         <commons-net.version>2.0</commons-net.version>
-        <jackson-databind.version>2.9.7</jackson-databind.version>
+        <jackson-databind.version>2.9.10.4</jackson-databind.version>
         <jackson-core.version>2.9.7</jackson-core.version>
         <jackson-annotations.version>2.9.7</jackson-annotations.version>
-        <poi.version>3.16</poi.version>
+        <poi.version>3.17</poi.version>
         <poi-ooxml.version>3.16</poi-ooxml.version>
         <log4j.version>2.0-beta8</log4j.version>
         <commons-validator.version>1.4.0</commons-validator.version>
         <sax.version>2.0.1</sax.version>
-        <apache.poi.version>3.16</apache.poi.version>
-        <xlsx.streamer.version>1.2.0</xlsx.streamer.version>
+        <apache.poi.version>3.17</apache.poi.version>
+        <xlsx.streamer.version>2.1.0</xlsx.streamer.version>
         <commons-iocommons-io.version>2.6</commons-iocommons-io.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
   
  
@@ -98,6 +100,12 @@
             <artifactId>mail</artifactId>
             <version>${javax.mail.version}</version>
         </dependency>
+        
+        <dependency>
+    <groupId>com.sun.mail</groupId>
+    <artifactId>jakarta.mail</artifactId>
+    <version>2.0.1</version>
+</dependency>
         
         <dependency>
             <groupId>org.docx4j</groupId>
@@ -277,7 +285,7 @@
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itextpdf</artifactId>
-            <version>5.5.7</version>
+            <version>5.5.13.3</version>
         </dependency>
 		 <dependency>
 		    <groupId>org.apache.poi</groupId>
@@ -315,17 +323,7 @@
         </dependency>
     </dependencies>
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
+        
         <finalName>ROOT</finalName>
     </build>
 </project>
