--- a/pom.xml
+++ b/pom.xml
@@ -9,30 +9,29 @@
     <url>http://maven.apache.org</url>
   
     <properties>
-        <org.springframework.version>5.3.30</org.springframework.version>
-        <org.spring.security.version>5.8.7</org.spring.security.version>
-        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
-        <jsp-api.version>2.2</jsp-api.version>
+        <org.springframework.version>5.3.38</org.springframework.version>
+        <org.spring.security.version>5.8.11</org.spring.security.version>
+        <javax.servlet-api.version>4.0.0</javax.servlet-api.version>
+        <jsp-api.version>2.3.1</jsp-api.version>
         <org.slf4j.version>1.6.1</org.slf4j.version>
         <org.apache.tiles.version>3.0.8</org.apache.tiles.version>
-        <javax.validation.version>1.1.0.Final</javax.validation.version>
-        <javax.mail.version>1.4.7</javax.mail.version>
-        <junit.version>4.11</junit.version>
+        <javax.validation.version>2.0.1.Final</javax.validation.version>
+        <javax.mail.version>1.5.0-b01</javax.mail.version>
+        <junit.version>4.13.1</junit.version>
         <jstl.version>1.2</jstl.version>
-        <commons-fileupload.version>1.3.3</commons-fileupload.version>
-        <commons-io.version>1.3.2</commons-io.version>
-        <commons-net.version>2.0</commons-net.version>
-        <jackson-databind.version>2.9.10.4</jackson-databind.version>
-        <jackson-core.version>2.9.7</jackson-core.version>
-        <jackson-annotations.version>2.9.7</jackson-annotations.version>
-        <poi.version>3.17</poi.version>
-        <poi-ooxml.version>3.16</poi-ooxml.version>
-        <log4j.version>2.0-beta8</log4j.version>
+        <commons-fileupload.version>1.5</commons-fileupload.version>
+        <commons-io.version>2.15.1</commons-io.version>
+        <commons-net.version>3.10.0</commons-net.version>
+        <jackson-databind.version>2.12.7.1</jackson-databind.version>
+        <jackson-core.version>2.12.7</jackson-core.version>
+        <jackson-annotations.version>2.12.7</jackson-annotations.version>
+        <poi.version>4.1.2</poi.version>
+        <poi-ooxml.version>4.1.2</poi-ooxml.version>
+        <log4j.version>2.3.2</log4j.version>
         <commons-validator.version>1.4.0</commons-validator.version>
         <sax.version>2.0.1</sax.version>
         <apache.poi.version>3.17</apache.poi.version>
         <xlsx.streamer.version>2.1.0</xlsx.streamer.version>
-        <commons-iocommons-io.version>2.6</commons-iocommons-io.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
@@ -85,7 +84,7 @@
        
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
-            <artifactId>jsp-api</artifactId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
             <version>${jsp-api.version}</version>
         </dependency>
        
@@ -189,11 +188,12 @@
             <artifactId>commons-fileupload</artifactId>  
             <version>${commons-fileupload.version}</version>  
         </dependency>  
-        <dependency>  
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-io</artifactId>  
-            <version>${commons-io.version}</version>
-        </dependency>
+        
+        <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>${commons-io.version}</version>
+      </dependency>
         
         <dependency>
             <groupId>commons-net</groupId>
@@ -281,28 +281,28 @@
             <artifactId>itextpdf</artifactId>
             <version>5.5.13.3</version>
         </dependency>
-		 <dependency>
-		    <groupId>org.apache.poi</groupId>
-		    <artifactId>poi</artifactId>
-		    <version>${apache.poi.version}</version>
-		</dependency>
+        <dependency>
+           <groupId>org.apache.poi</groupId>
+           <artifactId>poi</artifactId>
+           <version>${apache.poi.version}</version>
+       </dependency>
      	<dependency>
-		    <groupId>org.apache.poi</groupId>
-		    <artifactId>poi-ooxml</artifactId>
-		    <version>${apache.poi.version}</version>
-		</dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${apache.poi.version}</version>
+        </dependency>
 
-		  <dependency>
-		    <groupId>com.monitorjbl</groupId>
-		    <artifactId>xlsx-streamer</artifactId>
-		    <version>${xlsx.streamer.version}</version>
-		  </dependency>
-		  
-		   <dependency>
-		    <groupId>commons-io</groupId>
-		    <artifactId>commons-io</artifactId>
-		    <version>${commons-iocommons-io.version}</version>
-		</dependency>
+        <dependency>
+          <groupId>com.monitorjbl</groupId>
+          <artifactId>xlsx-streamer</artifactId>
+          <version>${xlsx.streamer.version}</version>
+        </dependency>
+
+        <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>${commons-io.version}</version>
+      </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
