--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,9 +25,14 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value></param-value>
+            <param-value/>
         </init-param>
         <load-on-startup>1</load-on-startup>
+        <multipart-config>
+            <max-file-size>104857600</max-file-size>
+            <max-request-size>104857600</max-request-size>
+            <file-size-threshold>0</file-size-threshold>
+        </multipart-config>
     </servlet>
     
     <servlet-mapping>
@@ -37,12 +42,11 @@
     
     <error-page>
         <error-code>404</error-code>
-        <location>/WEB-INF/jsp/404.jsp</location>
+        <location>/404.html</location>
     </error-page>
-   
     <error-page>
         <error-code>403</error-code>
-        <location>/WEB-INF/jsp/403.jsp</location>
+        <location>/403.html</location>
     </error-page>
    
     <filter>
