--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
     <url>http://maven.apache.org</url>
   
     <properties>
-        <org.springframework.version>6.2.8</org.springframework.version>
+        <org.springframework.version>6.2.11</org.springframework.version>
+        <org.springWebMVC.version>6.2.10</org.springWebMVC.version>
         <jsp-api.version>2.3.1</jsp-api.version>
         <thymeleaf.version>3.1.3.RELEASE</thymeleaf.version>
         <thymeleaf.layout.version>3.4.0</thymeleaf.layout.version>
@@ -53,7 +54,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${org.springframework.version}</version>
+            <version>${org.springWebMVC.version}</version>
         </dependency>
        
         <dependency>
